--- a/.gitignore
+++ b/.gitignore
@@ -21,13 +21,8 @@ dist/
 *.swp
 *.swo
 
-# OS generated files
+# OS files
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
 # Logs
@@ -52,12 +47,11 @@ obj/
 *.dll
 *.exe
 *.pdb
-*.log
 
 # Database
 *.db
 *.sqlite
 
 # Temporary files
-*.tmp
-*.temp 
+tmp/
+temp/ 
