--- a/NuiTeaApi/render.yaml
+++ b/NuiTeaApi/render.yaml
@@ -1,10 +1,9 @@
 services:
   - type: web
     name: nui-tea-api
-    env: dotnet
+    env: docker
     plan: free
-    buildCommand: dotnet build
-    startCommand: dotnet run
+    dockerfilePath: ./Dockerfile
     envVars:
       - key: ASPNETCORE_ENVIRONMENT
         value: Production
