Switch back to MySQL and update configuration for Render deployment

--- a/NuiTeaApi/appsettings.Production.json
+++ b/NuiTeaApi/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=your-azure-mysql-server.mysql.database.azure.com;Database=nui_tea_db;User Id=your-username;Password=your-password;SslMode=Required;"
+        "DefaultConnection": "${DATABASE_URL}"
     },
     "Logging": {
         "LogLevel": {
